# SYsU-lang

./: .gitignore  README.md  a.out  build.sh
compiler/: sysu-compiler
generator/: a.out  asg.hpp  cmp.ll  cmp.sh  codegenVt.hpp  deserializeAsg.hpp  dump.sh  jitcmp.sh  main.cc  non_recursive_dAsg.hpp  t.cpp  test.cpp
generator/ign/: cl.ll  cmp.sh  dump.sh  jitcmp.sh  my.ll  test95.c
lexer/: lexer.l
optimizer/: CMakeLists.txt  gen.sh  main.cc  opt.sh  optimizer.cc  optimizer.hh  report.txt  run.sh
optimizer/pass/: cse.cc  cse.hh  dce.cc  dce.hh  m2r.cc  m2r.hh  passPlugin.cc  passPlugin.hh  scc.cc  scc.hh
optimizer/pass/domain/: base.hpp  exp.hpp  utility.hpp  variable.hpp
parser/: CMakeLists.txt  README.md  asg.hpp  jsonVt.hpp  main.cc  parser.cc  parser.hh  parser.y  relexer.hpp  report.md  report.txt  实验二 report.md
tester/function_test2020/: 00_arr_defn2.sysu.c  01_var_defn.sysu.c
tester/function_test2022/: 79_var_name.sysu.c  95_float.sysu.c
